second commit - resilience4j example added properties - department,address,state, state code